fix(css): hide article scrollbars

--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@ body main article
     padding: 20px;
     width: 100%;
     height: 100%;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 body footer.page-footer
